simdX86/c2nimsrc/simdSse.h

__m128i _mm_setr_epi16 (short e7, short e6, short e5, short e4, short e3, short e2, short e1, short e0);
__m128i _mm_setr_epi32 (int e3, int e2, int e1, int e0);
__m128i _mm_setr_epi64 (__m64 e1, __m64 e0);
__m128i _mm_setr_epi8 (char e15, char e14, char e13, char e12, char e11, char e10, char e9, char e8, char e7, char e6, char e5, char e4, char e3, char e2, char e1, char e0);
__m128d _mm_setr_pd (double e1, double e0);
__m64 _mm_setr_pi16 (short e3, short e2, short e1, short e0);
__m64 _mm_setr_pi32 (int e1, int e0);
__m64 _mm_setr_pi8 (char e7, char e6, char e5, char e4, char e3, char e2, char e1, char e0);
__m128 _mm_setr_ps (float e3, float e2, float e1, float e0);
__m128d _mm_setzero_pd (void);
__m128 _mm_setzero_ps (void);
__m128i _mm_setzero_si128 ();
__m64 _mm_setzero_si64 (void);
void _mm_sfence (void);
__m128i _mm_shuffle_epi32 (__m128i a, int imm8);
__m128i _mm_shuffle_epi8 (__m128i a, __m128i b);
__m128d _mm_shuffle_pd (__m128d a, __m128d b, int imm8);
__m64 _mm_shuffle_pi16 (__m64 a, int imm8);
__m64 _mm_shuffle_pi8 (__m64 a, __m64 b);
__m128 _mm_shuffle_ps (__m128 a, __m128 b, unsigned int imm8);
__m128i _mm_shufflehi_epi16 (__m128i a, int imm8);
__m128i _mm_shufflelo_epi16 (__m128i a, int imm8);
__m128i _mm_sign_epi16 (__m128i a, __m128i b);
__m128i _mm_sign_epi32 (__m128i a, __m128i b);
__m128i _mm_sign_epi8 (__m128i a, __m128i b);
__m64 _mm_sign_pi16 (__m64 a, __m64 b);
__m64 _mm_sign_pi32 (__m64 a, __m64 b);
__m64 _mm_sign_pi8 (__m64 a, __m64 b);
__m128i _mm_sll_epi16 (__m128i a, __m128i count);
__m128i _mm_sll_epi32 (__m128i a, __m128i count);
__m128i _mm_sll_epi64 (__m128i a, __m128i count);
__m64 _mm_sll_pi16 (__m64 a, __m64 count);
__m64 _mm_sll_pi32 (__m64 a, __m64 count);
__m64 _mm_sll_si64 (__m64 a, __m64 count);
__m128i _mm_slli_epi16 (__m128i a, int imm8);
__m128i _mm_slli_epi32 (__m128i a, int imm8);
__m128i _mm_slli_epi64 (__m128i a, int imm8);
__m64 _mm_slli_pi16 (__m64 a, int imm8);
__m64 _mm_slli_pi32 (__m64 a, int imm8);
__m128i _mm_slli_si128 (__m128i a, int imm8);
__m64 _mm_slli_si64 (__m64 a, int imm8);
__m128d _mm_sqrt_pd (__m128d a);
__m128 _mm_sqrt_ps (__m128 a);
__m128d _mm_sqrt_sd (__m128d a, __m128d b);
__m128 _mm_sqrt_ss (__m128 a);
__m128i _mm_sra_epi16 (__m128i a, __m128i count);
__m128i _mm_sra_epi32 (__m128i a, __m128i count);
__m64 _mm_sra_pi16 (__m64 a, __m64 count);
__m64 _mm_sra_pi32 (__m64 a, __m64 count);
__m128i _mm_srai_epi16 (__m128i a, int imm8);
__m128i _mm_srai_epi32 (__m128i a, int imm8);
__m64 _mm_srai_pi16 (__m64 a, int imm8);
__m64 _mm_srai_pi32 (__m64 a, int imm8);
__m128i _mm_srl_epi16 (__m128i a, __m128i count);
__m128i _mm_srl_epi32 (__m128i a, __m128i count);
__m128i _mm_srl_epi64 (__m128i a, __m128i count);
__m64 _mm_srl_pi16 (__m64 a, __m64 count);
__m64 _mm_srl_pi32 (__m64 a, __m64 count);
__m64 _mm_srl_si64 (__m64 a, __m64 count);
__m128i _mm_srli_epi16 (__m128i a, int imm8);
__m128i _mm_srli_epi32 (__m128i a, int imm8);
__m128i _mm_srli_epi64 (__m128i a, int imm8);
__m64 _mm_srli_pi16 (__m64 a, int imm8);
__m64 _mm_srli_pi32 (__m64 a, int imm8);
__m128i _mm_srli_si128 (__m128i a, int imm8);
__m64 _mm_srli_si64 (__m64 a, int imm8);
void _mm_store_pd (double* mem_addr, __m128d a);
void _mm_store_pd1 (double* mem_addr, __m128d a);
void _mm_store_ps (float* mem_addr, __m128 a);
void _mm_store_ps1 (float* mem_addr, __m128 a);
void _mm_store_sd (double* mem_addr, __m128d a);
void _mm_store_si128 (__m128i* mem_addr, __m128i a);
void _mm_store_ss (float* mem_addr, __m128 a);
void _mm_store1_pd (double* mem_addr, __m128d a);
void _mm_store1_ps (float* mem_addr, __m128 a);
void _mm_storeh_pd (double* mem_addr, __m128d a);
void _mm_storeh_pi (__m64* mem_addr, __m128 a);
void _mm_storel_epi64 (__m128i* mem_addr, __m128i a);
void _mm_storel_pd (double* mem_addr, __m128d a);
void _mm_storel_pi (__m64* mem_addr, __m128 a);
void _mm_storer_pd (double* mem_addr, __m128d a);
void _mm_storer_ps (float* mem_addr, __m128 a);
void _mm_storeu_pd (double* mem_addr, __m128d a);
void _mm_storeu_ps (float* mem_addr, __m128 a);
void _mm_storeu_si128 (__m128i* mem_addr, __m128i a);
__m128i _mm_stream_load_si128 (__m128i* mem_addr);
void _mm_stream_pd (double* mem_addr, __m128d a);
void _mm_stream_pi (__m64* mem_addr, __m64 a);
void _mm_stream_ps (float* mem_addr, __m128 a);
void _mm_stream_si128 (__m128i* mem_addr, __m128i a);
void _mm_stream_si32 (int* mem_addr, int a);
void _mm_stream_si64 (__int64* mem_addr, __int64 a);
__m128i _mm_sub_epi16 (__m128i a, __m128i b);
__m128i _mm_sub_epi32 (__m128i a, __m128i b);
__m128i _mm_sub_epi64 (__m128i a, __m128i b);
__m128i _mm_sub_epi8 (__m128i a, __m128i b);
__m128d _mm_sub_pd (__m128d a, __m128d b);
__m64 _mm_sub_pi16 (__m64 a, __m64 b);
__m64 _mm_sub_pi32 (__m64 a, __m64 b);
__m64 _mm_sub_pi8 (__m64 a, __m64 b);
__m128 _mm_sub_ps (__m128 a, __m128 b);
__m128d _mm_sub_sd (__m128d a, __m128d b);
__m64 _mm_sub_si64 (__m64 a, __m64 b);
__m128 _mm_sub_ss (__m128 a, __m128 b);
__m128i _mm_subs_epi16 (__m128i a, __m128i b);
__m128i _mm_subs_epi8 (__m128i a, __m128i b);
__m128i _mm_subs_epu16 (__m128i a, __m128i b);
__m128i _mm_subs_epu8 (__m128i a, __m128i b);