simdX86/simdSseGeneric.nim

                e1: cshort; e0: cshort): m128i {.importc: "_mm_setr_epi16",
    header: "immintrin.h".}
proc setr_epi32*(e3: cint; e2: cint; e1: cint; e0: cint): m128i {.
    importc: "_mm_setr_epi32", header: "immintrin.h".}
proc setr_epi64*(e1: m64; e0: m64): m128i {.importc: "_mm_setr_epi64",
                                      header: "immintrin.h".}
proc setr_epi8*(e15: char; e14: char; e13: char; e12: char; e11: char; e10: char; e9: char;
               e8: char; e7: char; e6: char; e5: char; e4: char; e3: char; e2: char; e1: char;
               e0: char): m128i {.importc: "_mm_setr_epi8", header: "immintrin.h".}
proc setr*(e1: cdouble; e0: cdouble): m128d {.importc: "_mm_setr_pd",
                                        header: "immintrin.h".}
proc setr_pi16*(e3: cshort; e2: cshort; e1: cshort; e0: cshort): m64 {.
    importc: "_mm_setr_pi16", header: "immintrin.h".}
proc setr_pi32*(e1: cint; e0: cint): m64 {.importc: "_mm_setr_pi32",
                                     header: "immintrin.h".}
proc setr_pi8*(e7: char; e6: char; e5: char; e4: char; e3: char; e2: char; e1: char; e0: char): m64 {.
    importc: "_mm_setr_pi8", header: "immintrin.h".}
proc setr*(e3: cfloat; e2: cfloat; e1: cfloat; e0: cfloat): m128 {.importc: "_mm_setr_ps",
    header: "immintrin.h".}
proc setzero_pd128*(): m128d {.importc: "_mm_setzero_pd", header: "immintrin.h".}
proc setzero_ps128*(): m128 {.importc: "_mm_setzero_ps", header: "immintrin.h".}
proc setzero_si128*(): m128i {.importc: "_mm_setzero_si128", header: "immintrin.h".}
proc setzero_si64*(): m64 {.importc: "_mm_setzero_si64", header: "immintrin.h".}
proc sfence*() {.importc: "_mm_sfence", header: "immintrin.h".}
proc shuffle_epi32*(a: m128i; imm8: cint): m128i {.importc: "_mm_shuffle_epi32",
    header: "immintrin.h".}
proc shuffle_epi8*(a: m128i; b: m128i): m128i {.importc: "_mm_shuffle_epi8",
    header: "immintrin.h".}
proc shuffle*(a: m128d; b: m128d; imm8: cint): m128d {.importc: "_mm_shuffle_pd",
    header: "immintrin.h".}
proc shuffle_pi16*(a: m64; imm8: cint): m64 {.importc: "_mm_shuffle_pi16",
                                        header: "immintrin.h".}
proc shuffle_pi8*(a: m64; b: m64): m64 {.importc: "_mm_shuffle_pi8",
                                   header: "immintrin.h".}
proc shuffle*(a: m128; b: m128; imm8: cuint): m128 {.importc: "_mm_shuffle_ps",
    header: "immintrin.h".}
proc shufflehi_epi16*(a: m128i; imm8: cint): m128i {.importc: "_mm_shufflehi_epi16",
    header: "immintrin.h".}
proc shufflelo_epi16*(a: m128i; imm8: cint): m128i {.importc: "_mm_shufflelo_epi16",
    header: "immintrin.h".}
proc sign_epi16*(a: m128i; b: m128i): m128i {.importc: "_mm_sign_epi16",
                                        header: "immintrin.h".}
proc sign_epi32*(a: m128i; b: m128i): m128i {.importc: "_mm_sign_epi32",
                                        header: "immintrin.h".}
proc sign_epi8*(a: m128i; b: m128i): m128i {.importc: "_mm_sign_epi8",
                                       header: "immintrin.h".}
proc sign_pi16*(a: m64; b: m64): m64 {.importc: "_mm_sign_pi16", header: "immintrin.h".}
proc sign_pi32*(a: m64; b: m64): m64 {.importc: "_mm_sign_pi32", header: "immintrin.h".}
proc sign_pi8*(a: m64; b: m64): m64 {.importc: "_mm_sign_pi8", header: "immintrin.h".}
proc sll_epi16*(a: m128i; count: m128i): m128i {.importc: "_mm_sll_epi16",
    header: "immintrin.h".}
proc sll_epi32*(a: m128i; count: m128i): m128i {.importc: "_mm_sll_epi32",
    header: "immintrin.h".}
proc sll_epi64*(a: m128i; count: m128i): m128i {.importc: "_mm_sll_epi64",
    header: "immintrin.h".}
proc sll_pi16*(a: m64; count: m64): m64 {.importc: "_mm_sll_pi16", header: "immintrin.h".}
proc sll_pi32*(a: m64; count: m64): m64 {.importc: "_mm_sll_pi32", header: "immintrin.h".}
proc sll_si64*(a: m64; count: m64): m64 {.importc: "_mm_sll_si64", header: "immintrin.h".}
proc slli_epi16*(a: m128i; imm8: cint): m128i {.importc: "_mm_slli_epi16",
    header: "immintrin.h".}
proc slli_epi32*(a: m128i; imm8: cint): m128i {.importc: "_mm_slli_epi32",
    header: "immintrin.h".}
proc slli_epi64*(a: m128i; imm8: cint): m128i {.importc: "_mm_slli_epi64",
    header: "immintrin.h".}
proc slli_pi16*(a: m64; imm8: cint): m64 {.importc: "_mm_slli_pi16",
                                     header: "immintrin.h".}
proc slli_pi32*(a: m64; imm8: cint): m64 {.importc: "_mm_slli_pi32",
                                     header: "immintrin.h".}
proc slli_si128*(a: m128i; imm8: cint): m128i {.importc: "_mm_slli_si128",
    header: "immintrin.h".}
proc slli_si64*(a: m64; imm8: cint): m64 {.importc: "_mm_slli_si64",
                                     header: "immintrin.h".}
proc sqrt*(a: m128d): m128d {.importc: "_mm_sqrt_pd", header: "immintrin.h".}
proc sqrt*(a: m128): m128 {.importc: "_mm_sqrt_ps", header: "immintrin.h".}
proc sqrt_sd*(a: m128d; b: m128d): m128d {.importc: "_mm_sqrt_sd", header: "immintrin.h".}
proc sqrt_ss*(a: m128): m128 {.importc: "_mm_sqrt_ss", header: "immintrin.h".}
proc sra_epi16*(a: m128i; count: m128i): m128i {.importc: "_mm_sra_epi16",
    header: "immintrin.h".}
proc sra_epi32*(a: m128i; count: m128i): m128i {.importc: "_mm_sra_epi32",
    header: "immintrin.h".}
proc sra_pi16*(a: m64; count: m64): m64 {.importc: "_mm_sra_pi16", header: "immintrin.h".}
proc sra_pi32*(a: m64; count: m64): m64 {.importc: "_mm_sra_pi32", header: "immintrin.h".}
proc srai_epi16*(a: m128i; imm8: cint): m128i {.importc: "_mm_srai_epi16",
    header: "immintrin.h".}
proc srai_epi32*(a: m128i; imm8: cint): m128i {.importc: "_mm_srai_epi32",
    header: "immintrin.h".}
proc srai_pi16*(a: m64; imm8: cint): m64 {.importc: "_mm_srai_pi16",
                                     header: "immintrin.h".}
proc srai_pi32*(a: m64; imm8: cint): m64 {.importc: "_mm_srai_pi32",
                                     header: "immintrin.h".}
proc srl_epi16*(a: m128i; count: m128i): m128i {.importc: "_mm_srl_epi16",
    header: "immintrin.h".}
proc srl_epi32*(a: m128i; count: m128i): m128i {.importc: "_mm_srl_epi32",
    header: "immintrin.h".}
proc srl_epi64*(a: m128i; count: m128i): m128i {.importc: "_mm_srl_epi64",
    header: "immintrin.h".}
proc srl_pi16*(a: m64; count: m64): m64 {.importc: "_mm_srl_pi16", header: "immintrin.h".}
proc srl_pi32*(a: m64; count: m64): m64 {.importc: "_mm_srl_pi32", header: "immintrin.h".}
proc srl_si64*(a: m64; count: m64): m64 {.importc: "_mm_srl_si64", header: "immintrin.h".}
proc srli_epi16*(a: m128i; imm8: cint): m128i {.importc: "_mm_srli_epi16",
    header: "immintrin.h".}
proc srli_epi32*(a: m128i; imm8: cint): m128i {.importc: "_mm_srli_epi32",
    header: "immintrin.h".}
proc srli_epi64*(a: m128i; imm8: cint): m128i {.importc: "_mm_srli_epi64",
    header: "immintrin.h".}
proc srli_pi16*(a: m64; imm8: cint): m64 {.importc: "_mm_srli_pi16",
                                     header: "immintrin.h".}
proc srli_pi32*(a: m64; imm8: cint): m64 {.importc: "_mm_srli_pi32",
                                     header: "immintrin.h".}
proc srli_si128*(a: m128i; imm8: cint): m128i {.importc: "_mm_srli_si128",
    header: "immintrin.h".}
proc srli_si64*(a: m64; imm8: cint): m64 {.importc: "_mm_srli_si64",
                                     header: "immintrin.h".}
proc store*(mem_addr: ptr cdouble; a: m128d) {.importc: "_mm_store_pd",
    header: "immintrin.h".}
proc store_pd1*(mem_addr: ptr cdouble; a: m128d) {.importc: "_mm_store_pd1",
    header: "immintrin.h".}
proc store*(mem_addr: ptr cfloat; a: m128) {.importc: "_mm_store_ps",
                                       header: "immintrin.h".}
proc store_ps1*(mem_addr: ptr cfloat; a: m128) {.importc: "_mm_store_ps1",
    header: "immintrin.h".}
proc store_sd*(mem_addr: ptr cdouble; a: m128d) {.importc: "_mm_store_sd",
    header: "immintrin.h".}
proc store_si128*(mem_addr: ptr m128i; a: m128i) {.importc: "_mm_store_si128",
    header: "immintrin.h".}
proc store_ss*(mem_addr: ptr cfloat; a: m128) {.importc: "_mm_store_ss",
    header: "immintrin.h".}
proc store1*(mem_addr: ptr cdouble; a: m128d) {.importc: "_mm_store1_pd",
    header: "immintrin.h".}
proc store1*(mem_addr: ptr cfloat; a: m128) {.importc: "_mm_store1_ps",
                                        header: "immintrin.h".}
proc storeh*(mem_addr: ptr cdouble; a: m128d) {.importc: "_mm_storeh_pd",
    header: "immintrin.h".}
proc storeh_pi*(mem_addr: ptr m64; a: m128) {.importc: "_mm_storeh_pi",
                                        header: "immintrin.h".}
proc storel_epi64*(mem_addr: ptr m128i; a: m128i) {.importc: "_mm_storel_epi64",
    header: "immintrin.h".}
proc storel*(mem_addr: ptr cdouble; a: m128d) {.importc: "_mm_storel_pd",
    header: "immintrin.h".}
proc storel_pi*(mem_addr: ptr m64; a: m128) {.importc: "_mm_storel_pi",
                                        header: "immintrin.h".}
proc storer*(mem_addr: ptr cdouble; a: m128d) {.importc: "_mm_storer_pd",
    header: "immintrin.h".}
proc storer*(mem_addr: ptr cfloat; a: m128) {.importc: "_mm_storer_ps",
                                        header: "immintrin.h".}
proc storeu*(mem_addr: ptr cdouble; a: m128d) {.importc: "_mm_storeu_pd",
    header: "immintrin.h".}
proc storeu*(mem_addr: ptr cfloat; a: m128) {.importc: "_mm_storeu_ps",
                                        header: "immintrin.h".}
proc storeu_si128*(mem_addr: ptr m128i; a: m128i) {.importc: "_mm_storeu_si128",
    header: "immintrin.h".}
proc stream_load_si128*(mem_addr: ptr m128i): m128i {.
    importc: "_mm_stream_load_si128", header: "immintrin.h".}
proc stream*(mem_addr: ptr cdouble; a: m128d) {.importc: "_mm_stream_pd",
    header: "immintrin.h".}
proc stream_pi*(mem_addr: ptr m64; a: m64) {.importc: "_mm_stream_pi",
                                       header: "immintrin.h".}
proc stream*(mem_addr: ptr cfloat; a: m128) {.importc: "_mm_stream_ps",
                                        header: "immintrin.h".}
proc stream_si128*(mem_addr: ptr m128i; a: m128i) {.importc: "_mm_stream_si128",
    header: "immintrin.h".}
proc stream_si32*(mem_addr: ptr cint; a: cint) {.importc: "_mm_stream_si32",
    header: "immintrin.h".}
proc stream_si64*(mem_addr: ptr int64; a: int64) {.importc: "_mm_stream_si64",
    header: "immintrin.h".}
proc sub_epi16*(a: m128i; b: m128i): m128i {.importc: "_mm_sub_epi16",
                                       header: "immintrin.h".}
proc sub_epi32*(a: m128i; b: m128i): m128i {.importc: "_mm_sub_epi32",
                                       header: "immintrin.h".}
proc sub_epi64*(a: m128i; b: m128i): m128i {.importc: "_mm_sub_epi64",
                                       header: "immintrin.h".}
proc sub_epi8*(a: m128i; b: m128i): m128i {.importc: "_mm_sub_epi8",
                                      header: "immintrin.h".}
proc sub*(a: m128d; b: m128d): m128d {.importc: "_mm_sub_pd", header: "immintrin.h".}
proc sub_pi16*(a: m64; b: m64): m64 {.importc: "_mm_sub_pi16", header: "immintrin.h".}
proc sub_pi32*(a: m64; b: m64): m64 {.importc: "_mm_sub_pi32", header: "immintrin.h".}
proc sub_pi8*(a: m64; b: m64): m64 {.importc: "_mm_sub_pi8", header: "immintrin.h".}
proc sub*(a: m128; b: m128): m128 {.importc: "_mm_sub_ps", header: "immintrin.h".}
proc sub_sd*(a: m128d; b: m128d): m128d {.importc: "_mm_sub_sd", header: "immintrin.h".}
proc sub_si64*(a: m64; b: m64): m64 {.importc: "_mm_sub_si64", header: "immintrin.h".}
proc sub_ss*(a: m128; b: m128): m128 {.importc: "_mm_sub_ss", header: "immintrin.h".}
proc subs_epi16*(a: m128i; b: m128i): m128i {.importc: "_mm_subs_epi16",
                                        header: "immintrin.h".}
proc subs_epi8*(a: m128i; b: m128i): m128i {.importc: "_mm_subs_epi8",
                                       header: "immintrin.h".}
proc subs_epu16*(a: m128i; b: m128i): m128i {.importc: "_mm_subs_epu16",
                                        header: "immintrin.h".}
proc subs_epu8*(a: m128i; b: m128i): m128i {.importc: "_mm_subs_epu8",
                                       header: "immintrin.h".}
